fix(prithvi): Enable temporal crop classification and fix OOM
- Updated PrithviAdapter for 3-frame temporal input (replicated).
- Fixed model depth config (12 -> 6) to match checkpoint.
- Improved memory estimation to check peak usage and prevent OOM.
- Updated classes and colors for Crop Classification.
- Fixed viewer generation and reporter window slicing.

--- a/latex_thesis/references.bib
+++ b/latex_thesis/references.bib
@@ -1,117 +1,117 @@
-@misc{baumann2019wcps,
+@article{baumann2019wcps,
+  author={Baumann, P. and Misev, D. and Merticariu, V. and Pham, H.},
   title={The OGC Web Coverage Processing Service (WCPS) Standard},
-  author={Baumann, Peter and Misev, Dimitar and Merticariu, Vlad and Pham, Huu-Hiep},
-  year={2019},
-  publisher={Open Geospatial Consortium}
+  journal={Open Geospatial Consortium},
+  year={2019}
 }
 
 @inproceedings{cong2022satmae,
-  title={SatMAE: Pre-training Transformers for Temporal and Multi-Spectral Satellite Imagery},
-  author={Cong, Yacon and others},
+  author={Cong, Y. and et al.},
+  title={{SatMAE}: Pre-training Transformers for Temporal and Multi-Spectral Satellite Imagery},
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
   volume={35},
   pages={197--211},
   year={2022}
 }
 
-@inproceedings{dosovitskiy2020vit,
+@inproceedings{dosovitskiy2020image,
+  author={Dosovitskiy, A. and et al.},
   title={An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale},
-  author={Dosovitskiy, Alexey and others},
   booktitle={International Conference on Learning Representations (ICLR)},
   year={2020}
 }
 
-@article{drusch2012sentinel2,
-  title={Sentinel-2: ESA's Optical High-Resolution Mission for GMES Operational Services},
-  author={Drusch, M. and others},
+@article{drusch2012sentinel,
+  author={Drusch, M. and et al.},
+  title={Sentinel-2: {ESA}'s Optical High-Resolution Mission for {GMES} Operational Services},
   journal={Remote Sensing of Environment},
   volume={120},
   pages={25--36},
   year={2012}
 }
 
-@inproceedings{he2016resnet,
+@inproceedings{he2016deep,
+  author={He, K. and Zhang, X. and Ren, S. and Sun, J.},
   title={Deep Residual Learning for Image Recognition},
-  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
-  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  booktitle={Proceedings of the {IEEE} Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages={770--778},
   year={2016}
 }
 
-@inproceedings{ioffe2017batchrenorm,
+@inproceedings{ioffe2017batch,
+  author={Ioffe, S. and Szegedy, C.},
   title={Batch Renormalization: Towards Reducing Minibatch Dependence in Batch-Normalized Models},
-  author={Ioffe, Sergey and Szegedy, Christian},
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
   volume={30},
   year={2017}
 }
 
-@article{jakubik2023prithvi,
+@article{jakubik2023foundation,
+  author={Jakubik, J. and et al.},
   title={Foundation Models for Earth Observation: The Prithvi-100M Architecture},
-  author={Jakubik, Johannes and others},
   journal={arXiv preprint arXiv:2310.18660},
   year={2023}
 }
 
 @inproceedings{liu2021swin,
-  title={Swin Transformer: Hierarchical Vision Transformer using Shifted Windows},
-  author={Liu, Ze and others},
-  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+  author={Liu, Z. and et al.},
+  title={{Swin Transformer}: Hierarchical Vision Transformer using Shifted Windows},
+  booktitle={Proceedings of the {IEEE/CVF} International Conference on Computer Vision (ICCV)},
   year={2021}
 }
 
-@inproceedings{luo2016erf,
+@inproceedings{luo2016understanding,
+  author={Luo, W. and Li, Y. and Urtasun, R. and Zemel, R.},
   title={Understanding the Effective Receptive Field in Deep Convolutional Neural Networks},
-  author={Luo, Wenjie and Li, Yujia and Urtasun, Raquel and Zemel, Richard},
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
   year={2016}
 }
 
-@misc{maire2016solaris,
+@article{maire2016solaris,
+  author={Maire, M. and et al.},
   title={Solaris: An Open Source Tools for Deep Learning on Remote Sensing Imagery},
-  author={Maire, Michael and others},
-  year={2016},
-  publisher={CosmiQ Works}
+  journal={CosmiQ Works},
+  year={2016}
 }
 
-@inproceedings{ronneberger2015unet,
+@inproceedings{ronneberger2015u,
+  author={Ronneberger, O. and Fischer, P. and Brox, T.},
   title={U-Net: Convolutional Networks for Biomedical Image Segmentation},
-  author={Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
-  booktitle={Medical Image Computing and Computer-Assisted Intervention (MICCAI)},
+  booktitle={MICCAI},
   year={2015}
 }
 
 @inproceedings{stewart2022torchgeo,
+  author={Stewart, A. and et al.},
   title={TorchGeo: Deep Learning with Geospatial Data},
-  author={Stewart, Adam and others},
   booktitle={Proceedings of the 30th International Conference on Advances in Geographic Information Systems},
   year={2022}
 }
 
 @inproceedings{sumbul2019bigearthnet,
-  title={BigEarthNet: A Large-Scale Benchmark Archive for Remote Sensing Image Understanding},
-  author={Sumbul, Gencer and others},
+  author={Sumbul, G. and et al.},
+  title={{BigEarthNet}: A Large-Scale Benchmark Archive for Remote Sensing Image Understanding},
   booktitle={IEEE International Geoscience and Remote Sensing Symposium (IGARSS)},
   year={2019}
 }
 
 @inproceedings{vaswani2017attention,
+  author={Vaswani, A. and et al.},
   title={Attention Is All You Need},
-  author={Vaswani, Ashish and others},
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
   year={2017}
 }
 
-@article{wang2022vit_eo,
+@article{wang2022advancing,
+  author={Wang, D. and et al.},
   title={Advancing the State of the Art in Earth Observation with Vision Transformers},
-  author={Wang, Di and others},
   journal={IEEE Geoscience and Remote Sensing Magazine},
   year={2022}
 }
 
-@article{zhu2017dl_rs,
+@article{zhu2017deep,
+  author={Zhu, X. X. and et al.},
   title={Deep Learning in Remote Sensing: A Comprehensive Review and List of Resources},
-  author={Zhu, Xiao Xiang and others},
   journal={IEEE Geoscience and Remote Sensing Magazine},
   volume={5},
   number={4},
@@ -120,33 +120,33 @@
 }
 
 @article{iglovikov2018ternausnet,
-  title={TernausNet: U-Net with VGG11 Encoder Pre-Trained on ImageNet for Image Segmentation},
-  author={Iglovikov, Vladimir and Shvets, Alexey},
+  author={Iglovikov, V. and Shvets, A.},
+  title={{TernausNet}: U-Net with {VGG11} Encoder Pre-Trained on {ImageNet} for Image Segmentation},
   journal={arXiv preprint arXiv:1801.05746},
   year={2018}
 }
 
-@article{reina2020veghealth,
+@article{reina2020deep,
+  author={Reina, G. A. and et al.},
   title={Deep Learning for Vegetation Health Forecasting: A Case Study in Eastern Africa},
-  author={Reina, G. A. and others},
   journal={IEEE Access},
   volume={8},
   pages={203953--203967},
   year={2020}
 }
 
-@article{gorelick2017gee,
+@article{gorelick2017google,
+  author={Gorelick, N. and et al.},
   title={Google Earth Engine: Planetary-scale geospatial analysis for everyone},
-  author={Gorelick, Noel and others},
   journal={Remote Sensing of Environment},
   volume={202},
   pages={18--27},
   year={2017}
 }
 
-@article{misev2021arraydb,
+@article{misev2021array,
+  author={Misev, D. and Baumann, P.},
   title={Array Databases: Concepts, Standards, and Systems},
-  author={Misev, Dimitar and Baumann, Peter},
   journal={IEEE Transactions on Knowledge and Data Engineering},
   year={2021}
 }
