--- a/latex_thesis/main.tex
+++ b/latex_thesis/main.tex
@@ -15,14 +15,35 @@
 \usepackage{listings}
 \usepackage{xcolor}
 \usepackage{float}
-\usepackage{biblatex}
+\usepackage[nopatch=footnote]{microtype}
+\usepackage[numbers]{natbib} % For natbib style citations
+
+% Added Font Packages for improved aesthetics
+\usepackage{newtxtext}
+\usepackage{newtxmath}
+
+% Custom Commands for frequently used acronyms
+\newcommand{\GSIP}{\textbf{GSIP}}
+\newcommand{\EO}{\textbf{EO}}
+\newcommand{\CNNs}{\textbf{CNNs}}
+\newcommand{\ViTs}{\textbf{ViTs}}
+\newcommand{\ViT}{\textbf{ViT}}
+
+% Paragraph spacing
+\setlength{\parindent}{1.5em} % Indent paragraphs
+\setlength{\parskip}{0.5em} % Space between paragraphs
+
+% List item spacing (e.g., for itemize, enumerate)
+\usepackage{enumitem} % Needed for fine-grained list control
+\setlist{nosep} % No extra vertical space between list items
 
 % Geometry Settings
 \geometry{
     top=2.5cm,
     bottom=2.5cm,
     left=3cm,
-    right=2.5cm
+    right=2.5cm,
+    headheight=14.49998pt % Adjusted headheight based on compiler recommendation
 }
 
 % Hyperref Setup
@@ -34,6 +55,21 @@
     citecolor=blue,
     pdftitle={GeoSpatial Inference Pipeline Thesis},
     pdfauthor={Rati Vardiashvili},
+}
+
+% Fancyhdr Setup for custom page decorations
+\pagestyle{fancy}
+\fancyhf{} % Clear all headers and footers
+\fancyhead[R]{\thepage} % Page number on Right
+\fancyhead[L]{\nouppercase{\rightmark}} % Chapter title on Left
+\fancyfoot[C]{} % Clear footer, page number already in header
+\renewcommand{\headrulewidth}{0.4pt} % Line under header
+\renewcommand{\footrulewidth}{0pt} % No line under footer
+\fancypagestyle{plain}{
+    \fancyhf{}
+    \fancyfoot[C]{\thepage}
+    \renewcommand{\headrulewidth}{0pt}
+    \renewcommand{\footrulewidth}{0pt}
 }
 
 % Code Listing Settings
@@ -63,26 +99,43 @@
 
 \lstset{style=mystyle}
 
-% Bibliography Resource
-\addbibresource{references.bib}
-
 % Title Data
-\title{\textbf{GeoSpatial Inference Pipeline (GSIP):\\
+\title{\textbf{GeoSpatial Inference Pipeline (GSIP):\
 Distributing ML Inference on Big Geo Data}}
 \author{Rati Vardiashvili}
-\date{\today}
+\date{December 19, 2025}
 
 \begin{document}
 
-% Title Page
-\maketitle
+% Custom Title Page
+\begin{titlepage}
+    \begin{center}
+        \includegraphics[width=0.6\textwidth]{figures/constructor_logo.png}\\[2cm]
+        
+        {\Huge \textbf{GeoSpatial Inference Pipeline (GSIP):\
+        Distributing ML Inference on Big Geo Data}}\\[1.5cm]
+        
+        {\Large \textbf{Rati Vardiashvili}}\\[1.5cm]
+        
+        School of Computer Science\\[2cm]
+        
+        Supervisor: Peter Baumann\\[2cm]
+        
+        In partial fulfillment of the requirements for the degree of\
+        \textbf{Bachelor of Science in Computer Science}\\[2cm]
+        
+        December 19, 2025
+        
+    \end{center}
+\end{titlepage}
 
-% Abstract (Optional)
-% \begin{abstract}
-% \end{abstract}
+% Abstract
+\include{chapters/00_abstract}
+\thispagestyle{plain} % Ensure abstract doesn't have headers/footers
 
 % Table of Contents
 \tableofcontents
+\thispagestyle{plain} % Ensure table of contents doesn't have headers/footers
 \listoffigures
 \listoftables
 
@@ -98,7 +151,9 @@ Distributing ML Inference on Big Geo Data}}
 \include{chapters/07_conclusion}
 
 % References
-\printbibliography[heading=bibintoc, title={References}]
+\bibliographystyle{plainnat}
+\bibliography{references}
+\addcontentsline{toc}{chapter}{References}
 
 % Appendices
 \appendix
